--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -6,3 +6,11 @@ body {
     height: 100px;
 }
 
+.footer {
+    height: 10px;
+    margin-top: 70px;
+    width: 100%;
+    color: #1F6355;
+    padding: 2px;
+    text-align: center;
+  }
