--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,41 @@
 .mistral-res {
-    margin: 50px;
+    margin: 20px;
     padding: 25px;
     border: 1px solid #77D986;
     border-radius: 5px;
     background-color: #1F6355;
     color: #EFF8FC;
+}
+
+.species-info {
+    text-align: left;
+}
+
+/* Progress Bar */
+.progress {
+    position: relative;
+    height: 4px;
+    display: block;
+    width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 4px;
+    overflow: hidden;
+}
+  
+.progress .indeterminate {
+    background-color: #77D986;
+    width: 100%;
+    left: 0;
+    animation: indeterminate 0.5s infinite linear;
+}
+  
+@keyframes indeterminate {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
 }
 
 #content {
@@ -13,14 +44,14 @@
 }
   
 #species {
+    padding: 10px;
     width: 50%;
 }
   
 #map {
     margin-top: 40px;
     margin-right: 40px;
-    height: 300px;
+    height: 480px;
     width: 50%;
     border: 3px solid #000;
 }
-
